fixes "skills" alignment - padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ hr {
     list-style-type: none;
 }
 
+ul {
+    padding-left: 0;
+}
+
 .service-form {
     display: flex;
     position: relative;
@@ -395,7 +399,6 @@ img.image {
     z-index: 3;
     width: 30%;
 }
-
 
 #p1, #p2 {
     font-size: 1.5rem;
